[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-core"
version = "0.7.0"
edition = "2018"

homepage = "https://github.com/rust-netlink/netlink-packet-core"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-packet-core"
description = "netlink packet types"

[dependencies]
byteorder = "1.3.2"

[dev-dependencies]
netlink-packet-route = "0.13.0"
