[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-core"
version = "0.8.1"
edition = "2021"

homepage = "https://github.com/rust-netlink/netlink-packet-core"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-packet-core"
description = "netlink packet types"

[dependencies]
netlink-packet-core-paste = { version = "0.1.0", path = "netlink-packet-core-paste" }

[dev-dependencies]
netlink-packet-route = "0.13.0"
